Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-15435

__req_capsule_get(): ASSERTION( msg != ((void *)0) ) failed

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.15.0
    • None
    • None
    • 3
    • 9223372036854775807

      [ 8032.711092] Lustre: DEBUG MARKER: == replay-single test 120: DNE fail abort should stop both normal and DNE replay ========================================================== 02:17:06 (1641539826)
      [ 8035.011569] Lustre: DEBUG MARKER: mds1 REPLAY BARRIER on lustre-MDT0000
      [ 8039.713015] LustreError: 3379:0:(client.c:1256:ptlrpc_import_delay_req()) @@@ IMP_CLOSED  req@ffff8800b8280e40 x1721270907084672/t0(0) o41->lustre-MDT0001-osp-MDT0000@0@lo:24/4 lens 224/368 e 0 to 0 dl 0 ref 1 fl Rpc:QU/0/ffffffff rc 0/-1 job:'osp-pre-1-0.0'
      [ 8044.896335] LDISKFS-fs (dm-0): recovery complete
      [ 8044.897515] LDISKFS-fs (dm-0): mounted filesystem with ordered data mode. Opts: user_xattr,errors=remount-ro,no_mbcache,nodelalloc
      [ 8044.930912] LustreError: 17886:0:(layout.c:2135:__req_capsule_get()) ASSERTION( msg != ((void *)0) ) failed: 
      [ 8044.932996] LustreError: 17886:0:(layout.c:2135:__req_capsule_get()) LBUG
      [ 8044.934449] Pid: 17886, comm: mount.lustre 3.10.0-7.9-debug #1 SMP Fri Dec 3 22:45:13 EST 2021
      [ 8044.936411] Call Trace:
      [ 8044.937112] [<0>] libcfs_call_trace+0x90/0xf0 [libcfs]
      [ 8044.938341] [<0>] lbug_with_loc+0x4c/0xa0 [libcfs]
      [ 8044.939612] [<0>] __req_capsule_get+0x5d6/0x6a0 [ptlrpc]
      [ 8044.940945] [<0>] req_capsule_server_get+0x18/0x20 [ptlrpc]
      [ 8044.942292] [<0>] mgc_target_register+0x219/0x530 [mgc]
      [ 8044.943544] [<0>] mgc_set_info_async+0x3cb/0x1350 [mgc]
      [ 8044.944799] [<0>] server_start_targets+0x12ae/0x2bc0 [obdclass]
      [ 8044.946183] [<0>] server_fill_super+0x11fa/0x18a0 [obdclass]
      [ 8044.947564] [<0>] lustre_fill_super+0x3e8/0x440 [lustre]
      [ 8044.948776] [<0>] mount_nodev+0x4d/0xb0
      [ 8044.949791] [<0>] lustre_mount+0x18/0x20 [lustre]
      [ 8044.950876] [<0>] mount_fs+0x39/0x1b0
      [ 8044.951675] [<0>] vfs_kern_mount+0x67/0x110
      [ 8044.952573] [<0>] do_mount+0x1ef/0xce0
      [ 8044.953666] [<0>] SyS_mount+0x83/0xd0
      [ 8044.954575] [<0>] system_call_fastpath+0x1f/0x24
      [ 8044.955738] [<0>] 0xfffffffffffffffe
      [ 8044.956664] Kernel panic - not syncing: LBUG
      

            zam Alexander Zarochentsev
            zam Alexander Zarochentsev
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved: